--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "sophanarith sok",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "url": "^0.11.0"
   }
 }
